manifests/order-service-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: order-service-deployment
  namespace: nittfest

spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: docker.io/codexrohith/nittfest-order-service:latest
          ports:
            - containerPort: 8082
