manifests/order-service-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: order-service
  namespace: nittfest

spec:
  selector:
    app: order-service

  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082

  type: ClusterIP
