manifests/user-service-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: user-service
  namespace: nittfest

spec:
  selector:
    app: user-service

  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081

  type: ClusterIP
