manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: nittfest
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: nittfest-task.centralindia.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: user-service
            port:
              number: 8081
        path: /api/users
        pathType: Prefix
      - backend:
          service:
            name: order-service
            port:
              number: 8082
        path: /api/orders
        pathType: Prefix
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nittfest-task.centralindia.cloudapp.azure.com
    secretName: nittfest-tls
